:tada: add progressBar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"
   rel="stylesheet"
 />
+<script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.5.6/dist/progressbar.js"></script>
 <link rel="stylesheet" href="styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="pomodoro-container">
@@ -19,7 +21,6 @@
           </div>
           <div id="pomodoro-clock-actions">
             <button id="pomodoro-start">
-                Start
                 <i class="fas fa-play" id="play-icon"></i>
                 <i class="fas fa-pause hidden" id="pause-icon"></i>
               </button>
@@ -52,7 +53,8 @@
         </div>
       </div>
       </div>
+     
+      <script src="script.js"></script>
       <script src="progressBar.js"></script>
-    <script src="script.js"></script>
   </body>
 </html>
